competencia2/ejercicio11_Streamlit/.antlr/ExprParser.java
// Generated from c:/Automatas_Ejercicios/competencia2/ejercicio11_Streamlit/Expr.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class ExprParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		PUBLIC=1, CLASS=2, STATIC=3, VOID=4, INT=5, DOUBLE=6, STRING=7, BOOLEAN=8, 
		FOR=9, WHILE=10, DO=11, GET=12, SET=13, NEW=14, SCANNER=15, IF=16, ELSE=17, 
		IMPORT=18, PRIVATE=19, THIS=20, NULL=21, TRUE=22, FALSE=23, ID=24, NUM=25, 
		CADENA=26, IGUAL=27, IGUAL_IGUAL=28, MAS=29, MENOS=30, MULTI=31, MODULO=32, 
		DIVISION=33, MAYOR=34, MENOR=35, MAYOR_IGUAL=36, MENOR_IGUAL=37, MAS_MAS=38, 
		MENOS_MENOS=39, PAR_IZQ=40, PAR_DER=41, LLAVE_IZQ=42, LLAVE_DER=43, PUNTO_COMA=44, 
		DOS_PUNTOS=45, PUNTO=46, COR_IZQ=47, COR_DER=48, WS=49;
	public static final int
		RULE_root = 0, RULE_expr = 1;
	private static String[] makeRuleNames() {
		return new String[] {
			"root", "expr"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'public'", "'class'", "'static'", "'void'", "'int'", "'double'", 
			"'string'", "'boolean'", "'for'", "'while'", "'do'", "'get'", "'set'", 
			"'new'", "'Scanner'", "'if'", "'else'", "'import'", "'private'", "'this'", 
			"'null'", "'true'", "'false'", null, null, null, "'='", "'=='", "'+'", 
			"'-'", "'*'", "'%'", "'/'", "'>'", "'<'", "'>='", "'<='", "'++'", "'--'", 
			"'('", "')'", "'{'", "'}'", "';'", "':'", "'.'", "'['", "']'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "PUBLIC", "CLASS", "STATIC", "VOID", "INT", "DOUBLE", "STRING", 
			"BOOLEAN", "FOR", "WHILE", "DO", "GET", "SET", "NEW", "SCANNER", "IF", 
			"ELSE", "IMPORT", "PRIVATE", "THIS", "NULL", "TRUE", "FALSE", "ID", "NUM", 
			"CADENA", "IGUAL", "IGUAL_IGUAL", "MAS", "MENOS", "MULTI", "MODULO", 
			"DIVISION", "MAYOR", "MENOR", "MAYOR_IGUAL", "MENOR_IGUAL", "MAS_MAS", 
			"MENOS_MENOS", "PAR_IZQ", "PAR_DER", "LLAVE_IZQ", "LLAVE_DER", "PUNTO_COMA", 
			"DOS_PUNTOS", "PUNTO", "COR_IZQ", "COR_DER", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Expr.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ExprParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RootContext extends ParserRuleContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode EOF() { return getToken(ExprParser.EOF, 0); }
		public RootContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_root; }
	}

	public final RootContext root() throws RecognitionException {
		RootContext _localctx = new RootContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_root);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(4);
			expr();
			setState(5);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExprContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(ExprParser.EOF, 0); }
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
	}

	public final ExprContext expr() throws RecognitionException {
		ExprContext _localctx = new ExprContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_expr);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(7);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN =
		new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}